--- a/public/style.css
+++ b/public/style.css
@@ -34,9 +34,9 @@ h2 {
   flex-direction: column;
 }
 .tittle img {
-  width: 50px;
-  height: 50px;
-  margin: 40px auto;
+  width: 100px;
+  height: 100px;
+  margin: 20px auto;
   
 }
 h1 {
@@ -48,7 +48,7 @@ h1 {
 h2 {
   font-size: 2rem;
   margin-bottom: 1rem;
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .buscar {
@@ -108,6 +108,11 @@ button {
   color: white;
   line-height: 1;
   transition: all 0.3s ease;
+}
+a {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
 }
 
 button:hover {
@@ -204,45 +209,6 @@ button:hover {
 
 .view-book-btn:active {
   transform: scale(0.95);
-}
-
-
-#iframe-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-#iframe-container.active {
-  opacity: 1;
-  display: flex !important;
-}
-
-#iframe-container iframe {
-  background-color: white;
-  border-radius: 10px;
-}
-
-#back-btn {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  z-index: 1001;
-  background-color: var(--accent-color);
-}
-
-#back-btn:hover {
-  background-color: #c0392b;
 }
 
 #loading-spinner {
